<resources>
    <string name="app_name">Car buddy </string>
    <string name="action_settings">Settings</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="scanning">scanning for beacons...</string>
    <string name="paired_beacons_title">Paired Beacons</string>
    <string name="title_other_beacons">Other Available Beacons</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="button_scan">Scan for beacons</string>
    <string name="update_fr">Update frequency:</string>
    <string name="signal_strength">Signal strength:</string>
    <string name="rssi_title">Choose beacon signal strength(bigger number -> less quality-> further distance)</string>
    <string name="update_fr_title">Choose update frequency time(seconds)</string>
    <string name="go_back_btn_title">Go back</string>
    <string name="monitor_btn_start_title">Start monitor</string>
    <string name="monitor_btn_stop_title">Stop monitor</string>
    <string name="beacon_name_title">Device name:</string>
</resources>
