<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/paired_beacons_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beacons_title_background"
        android:paddingLeft="@dimen/paired_beacons_title_padding_left"
        android:text="@string/paired_beacons_title"
        android:textColor="@color/beacons_title_color"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/others_beacons_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beacons_title_background"
        android:paddingLeft="@dimen/others_beacons_title_padding_left"
        android:text="@string/title_other_beacons"
        android:textColor="@color/beacons_title_color"
        android:visibility="gone" />

    <ListView
        android:id="@+id/other_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan" />
</LinearLayout>
